tests/fixtures/invalid/int_div_set.py
# Cannot divide Int and Set[int]
x: float = 1 / {1, 2, 3}
